# Draco

./: .gitignore  CHANGELOG.md  Draco.cpp  Draco.h  HISTORY.rst  LICENSE  README.md  README.rst  draco.py  library.properties  main.py  pyproject.toml  requirements.txt
DHT-sensor-library/: DHT.h  DHT_U.h
config/: config.json  config.yaml
docs/: telegram_commands.md  telegram_commands.rst
docs/homeassistant/: automation.yaml  configuration.yaml  input_boolean.yaml  input_number.yaml  lovelace_watering.yaml  mqtt_draco_watering.yaml  readme.md  readme.rst  sensor.yaml
docs/systemd/: draco.service  how_to_systemd.md  how_to_systemd.rst  how_to_systemd.txt
draco/interfaces/: __init__.py  mqtt_interface.py  relay_shield_interface.py  scheduler_interface.py  telegram_interface.py
draco/processors/: GPIO_handler.py  HW_handler.py  __init__.py  mqtt_manager.py  system_scheduler.py  telegram_bot.py
draco/utils/: types.py  utils.py
examples/One_Plant_Test/: One_Plant_Test.ino
requirements/: requirements.txt
tests/: test_GPIO_relay.py  test_corleone.py  test_keyring.py  test_main_examples_TobeDeleted.py  test_manager.py  test_mqtt_pub.py  test_mqtt_sub.py  test_schedule.py  test_webcam.py
